# SAT-STEP

./: .gitignore  Cargo.toml  LICENSE  Project management practices.md  README.md  gui-testing.md  practices.md  technical-specifications.md
.github/workflows/: ci.yml
cadical-rs/: build.rs
cadical-rs/cadical/src/: backtrack.cpp  cadical.hpp  ccadical.cpp  ccadical.h  clause.cpp  condition.cpp  external.cpp  instantiate.cpp  internal.hpp  propagate.cpp  solver.cpp
cadical-rs/src/: lib.rs
data/: empty_sudoku.txt  sample_sudoku.txt  sudoku1.txt
gui-testing/: gui-testing.md
src/: 2a  3a  app_state.rs  binary_cnf.rs  cadical_wrapper.rs  cnf.rs  cnf_converter.rs  cnf_var.rs  ctrl_obj.rs  error.rs  filtering.rs  gui.rs  lib.rs  main.rs  service.rs  statistics.rs  sudoku.rs  tests.rs  warning.rs
src/cnf/: binary_encoding.rs  decimal_encoding.rs
src/gui/: conrollable_list.rs  constraint_list.rs  controllable_list.rs  controls.rs  mod.rs  statistics.rs  sudoku_cell.rs  sudoku_grid.rs  themes.rs  trail_panel.rs
