[package]
name = "sat-step"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cadical = { path = "cadical-rs" }
eframe = "0.22.0"
egui = "0.22.0"
rfd = {version = "0.12.0", default-features = false, features = ["xdg-portal"]}
